syntax = "proto3";

option java_package = "com.vaecn.grpclb.server";
option java_outer_classname = "HelloRpcServiceProto";
option java_multiple_files = false;

service HelloRpcService {
    rpc sayHello (SayHelloRequest) returns (SayHelloResponse) {
    }
}

message SayHelloRequest {
    string request = 1;
}

message SayHelloResponse {
    string response = 1;
}